@@ -4,6 +4,7 @@ S3method(plot,CFA)
 S3method(plot,EGA)
 S3method(plot,NetLoads)
 S3method(plot,bootEGA)
+S3method(plot,dynEGA)
 S3method(plot,dynEGA.Groups)
 S3method(plot,dynEGA.Individuals)
 S3method(print,EGA)
