@@ -1,18 +1,32 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/ega.wmt.R
+% Please edit documentation in R/datasets.R, R/ega.wmt.R
 \docType{data}
 \name{ega.wmt}
 \alias{ega.wmt}
-\title{\code{\link[EGAnet]{EGA}} Network of \code{\link[EGAnet]{wmt2}}Data}
-\format{A 17 x 17 adjacency matrix}
+\title{EGA WMT-2 Data}
+\format{
+A 17 x 17 adjacency matrix
+
+A 17 x 17 adjacency matrix
+}
 \usage{
+data(ega.wmt)
+
 data(ega.wmt)
 }
 \description{
+\code{\link[EGAnet]{EGA}} Network of \code{\link[EGAnet]{wmt2}}Data
+
+An \code{\link[EGAnet]{EGA}} using the \code{"glasso"} model of the
+Wiener Matrizen-Test 2 (WMT-2)
+}
+\details{
 An \code{\link[EGAnet]{EGA}} using the \code{"glasso"} model of the
 Wiener Matrizen-Test 2 (WMT-2)
 }
 \examples{
+data("ega.wmt")
+
 data("ega.wmt")
 
 }
