@@ -1,10 +1,12 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/toy.example.R
+% Please edit documentation in R/datasets.R
 \docType{data}
 \name{toy.example}
 \alias{toy.example}
-\title{Toy Example}
-\format{A 500x6 response matrix}
+\title{Toy Example Data}
+\format{
+A 500x6 response matrix
+}
 \usage{
 data(toy.example)
 }
